add_subdirectory(dhcp_dns)
add_subdirectory(ftp)
add_subdirectory(mqtt)
add_subdirectory(sntp)
add_subdirectory(tcp_client_over_ssl)
add_subdirectory(tftp)
add_subdirectory(netbios)
add_subdirectory(udp_multicast)
add_subdirectory(network_install)
add_subdirectory(upnp)
add_subdirectory(pppoe)
add_subdirectory(can)
add_subdirectory(tcp_server_multi_socket)
add_subdirectory(loopback)
add_subdirectory(http)
add_subdirectory(udp)